--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bulma": "^0.6.2",
     "express": "^4.15.4",
     "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
