--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.18.0",
     "bulma": "^0.6.2",
     "express": "^4.15.4",
+    "serialize-javascript": "^1.4.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.13",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-node-externals": "^1.6.0"
   }
 }
